--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
   
   <div class="urna">
     <div class="tela">
-      ..
+      <div class="d1">
+        <div class="d1-left">
+          <div class="d1-1">
+            <span>SEU VOTO PARA :</span>
+          </div>
+          <div class="d1-2">
+            <span>VEREADOR</span>
+          </div>
+          <div class="d1-3">
+            ...
+          </div>
+          <div class="d1-4">
+            NOME : FULANO DE TAL<bR>
+            PARTIDO : QQQ<BR>
+            VICE : BELTRANO DE TAL
+          </div>
+        </div>
+        <div class="d1-right">
+...
+        </div>
+      </div>
+      <div class="d2">
+        Aperte a tela: <br>
+        CONFIRMA para CONFIRMAR esse voto.<br>
+        CORRIGE para REINICIAR esse voto.
+      </div>
     </div>
     <div class="teclado">
       <div class="teclado-linha">
