--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       <div class="d1">
         <div class="d1-left">
           <div class="d1-1">
-            <span>SEU VOTO PARA :</span>
+            <span>SEU VOTO PARA</span>
           </div>
           <div class="d1-2">
             <span>VEREADOR</span>
           </div>
           <div class="d1-3">
-            ...
+            <div class="num pisca"></div>
+            <div class="num"></div>
           </div>
           <div class="d1-4">
             NOME : FULANO DE TAL<bR>
@@ -29,7 +30,14 @@
           </div>
         </div>
         <div class="d1-right">
-...
+          <div class="d1-image">
+            <img src="./images/84.jpg" alt="" srcset="">
+            PREFEITO
+          </div>
+          <div class="d1-image small">
+            <img src="./images/84_2.jpg" alt="" srcset="">
+            VICE
+          </div>
         </div>
       </div>
       <div class="d2">
