--- a/index.html
+++ b/index.html
@@ -73,5 +73,7 @@
     </div>
   </div>
 
+  <script src="./script/etapas.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 </html>
