--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
     </div>
   </div>
 
+  <div class="numerosVoto">
+    Vereador : <br>
+    38111, <Br>
+      77222. <br><Br>
+
+      Prefeito : <br>
+      99, <br>
+      84. <br>
+
+  </div>
   <script src="./script/etapas.js"></script>
   <script src="./script/script.js"></script>
 </body>
